Resolves Bug 1374392: TabbedPane Headers aren't clearly visible in High Contrast Desert Theme
The change elevates specificity of css selectors applying high contrast styles to improve visibility when tabs are selected, or hovered.

improves contrast in tabbed pane headers in main navigation bar and Settings in High Contrast themes

Before
https://i.imgur.com/4wPkika.gif

After
https://i.imgur.com/DnNwWYc.gif

Bug: 1374392

--- a/front_end/ui/components/icon_button/iconButton.css
+++ b/front_end/ui/components/icon_button/iconButton.css
@@ -58,11 +58,15 @@
   .icon-button {
     forced-color-adjust: none;
     background-color: ButtonFace;
+
+    --icon-color: ButtonText;
   }
 
   .icon-button:focus-visible,
   .icon-button.with-click-handler:hover {
     background-color: Highlight;
     color: HighlightText;
+
+    --icon-color: HighlightText;
   }
 }
