--- a/front_end/ui/legacy/reportView.css
+++ b/front_end/ui/legacy/reportView.css
@@ -125,3 +125,9 @@
 .show-mask .image-wrapper {
   background: var(--image-file-checker);
 }
+
+@media (forced-colors: active) {
+  .report-field-value .inline-icon {
+    --icon-color: ButtonText;
+  }
+}
